--- a/view/add.hbs
+++ b/view/add.hbs
@@ -16,10 +16,10 @@
     <hr>
 
     <label for="name"><b>Student name</b></label>
-    <input type="text" placeholder="Enter Name" name="name" id="s_name" required>
+    <input type="text" placeholder="Enter Name" name="c_name" id="c_name" required>
 
     <label for="phn"><b>Phone no</b></label>
-    <input type="phone" placeholder="Enter Phone Number" name="phone" id="phone" required>
+    <input type="phone" placeholder="Enter Phone Number" name="phone" id="phone" required >
 
     <label for="eml-id"><b>Email Id</b></label>
     <input type="email" placeholder="Enter Email Id" name="email" id="email" required>
@@ -29,7 +29,7 @@
      <input type="radio" name="gender" id="" value="Male"> Male
      <input type="radio" name="gender" id=""  value="Female">  Female
   </div>
-    <button type="submit" class="registerbtn">ADD STUDENT</button>
+    <button type="submit" class="registerbtn">Add Student</button>
 
   
     <a href="./" style="color:black">BACK TO HOME PAGE</a> <br>
