--- a/view/view.hbs
+++ b/view/view.hbs
@@ -32,9 +32,9 @@
       {{#data}}
     <tr>
      
-      <td>{{username}}</td>
-      <td>{{phoneno}}</td>
-      <td>{{emailid}}</td>
+      <td>{{c_name}}</td>
+      <td>{{phone}}</td>
+      <td>{{email}}</td>
       <td>{{gender}}</td>
     </tr>
     {{/data}}
